# ode_integrators

./: .gitignore  CMakeLists.txt  LICENSE  README.md  karney_system.cpp
arma_example/: arma_example.cpp
cmake/: poincare_mapConfig.cmake.in
henon_heilles/: henon_heiles.cpp  henon_heiles_impl.cpp  henon_heiles_impl.hpp  phase_space.hpp
poincare_map/: .gitignore  CMakeLists.txt  append_colums_of_zeros_to_initial_points.py  append_colums_of_zeros_to_my_foo.py  armadillo_state.cpp  init.txt  initial_points@energy=0.5.txt  initial_points_extended.txt  my_foo.txt  my_foo_extended.txt  plot_hdf5_output.py  state_observer.cpp  system_and_poincare_surface.hpp  test_E_H_O.cpp  test_G_H_O.cpp
poincare_map/bindings/: CMakeLists.txt  __init__.py  setup.py
poincare_map/bindings/core/src/: ActionIntegrationResultDecorator.cpp  action_integration_ext.cpp  state_bindings.cpp
poincare_map/bindings/dynamic_analysis/core/: CMakeLists.txt
poincare_map/bindings/dynamic_analysis/core/include/: ActionIntegrationResultDecorator.hpp
poincare_map/bindings/dynamic_analysis/core/src/: action_integration_ext.cpp
poincare_map/bindings/include/: ActionIntegrationResultDecorator.hpp  action_integration_bindings.hpp  dynamic_system_bindings.hpp  hamiltonians_bindings.hpp  integration_options_bindings.hpp  orbit_integration_bindings.hpp  state_bindings.hpp
poincare_map/bindings/src/: action_integration_bindings.cpp  action_integration_ext.cpp  arma_state_bindings.cpp  dynamic_system_bindings.cpp  hamiltonians_bindings.cpp  hello_ext.cpp  integration_options_bindings.cpp  orbit_integration_bindings.cpp  state_bindings.cpp  test_action_integration_ext.py  test_action_integration_numerics.py  test_hello_ext.py
poincare_map/cmake/: version.hpp.in
poincare_map/include/: UnperturbedExtendedOscillatorHamiltonian.hpp  UnperturbedExtendedPendulumHamiltonian.hpp  action_integration.hpp  action_integration_result.hpp  armadillo_state.hpp  fields_and_brackets.hpp  hamiltonian_dynamic_system.hpp  integration_options.hpp  integration_utilities.hpp  orbit_closing_check.hpp  phase_space_description.hpp  phase_space_state_types.hpp  samplingCollections.hpp  system_and_poincare_surface.hpp  version.hpp
poincare_map/include/input_output/: hdf5_io.hpp  prepare.hpp  state_specific_file_io.hpp  text_file_io.hpp
poincare_map/input_output/: hdf5_io.cpp  state_specific_file_io.hpp
poincare_map/python/: CMakeLists.txt  setup.py
poincare_map/python/dynamic_analysis/: CMakeLists.txt
poincare_map/python/dynamic_analysis/core/: CMakeLists.txt  __init__.py
poincare_map/python/dynamic_analysis/orbital/: near_resonance.py
poincare_map/scripts/: e_pendulum_energy_surfaces_example.py  e_pendulum_energy_surfaces_example_back.py  effective_mass.py  effective_mass_on_resonance.py  malakia.py  plot_hdf5_output.py  run_and_plot.py  setup.py  trial_script.py
poincare_map/scripts/dynamic_analysis/: harmonics.py  near_resonance.py
poincare_map/scripts/dynamic_analysis.egg-info/: PKG-INFO  SOURCES.txt
poincare_map/scripts/tests/: test_harmonics.py  test_near_resonance.py
poincare_map/src/: UnperturbedExtendedOscillatorHamiltonian.cpp  UnperturbedExtendedPendulumHamiltonian.cpp  action_integration.cpp  action_integration_result.cpp  armadillo_state.cpp  fields_and_brackets.cpp  hamiltonian_dynamic_system.cpp  integration_options.cpp  orbit_closing_check.cpp  phase_space_types.cpp  samplingCollections.cpp
poincare_map/src/input_output/: general_file_io.cpp  hdf5_io.cpp  prepare.cpp  state_specific_file_io.cpp  text_file_io.cpp
poincare_map/tests/bindings/: test_action_integration_ext.py  test_action_integration_numerics.py  test_integration_options.py  test_state_bindings.py
poincare_map/tests/python/: test_action_integration_ext.py  test_integration_options.py  test_state_bindings.py
stand_alone_odeint_examples/: CMakeLists.txt  harmonic_oscilator.cpp  utilities.hpp
stand_alone_odeint_examples/henon_heilles/: henon_heiles_impl.cpp  henon_heiles_impl.hpp
state_observer/: .gitignore  armadillo_state.hpp  general_file_io.cpp  general_file_io.hpp  hdf5_io.cpp  hdf5_io.hpp  init.txt  integration_utilities.cpp  integration_utilities.hpp  orbit_classes.cpp  orbit_classes.hpp  plot_dummy_output.py  plot_hdf5_output.py  state_observer.cpp  state_specific_file_io.cpp  state_specific_file_io.hpp  state_wrapper.cpp  state_wrapper.hpp  system_and_poincare_surface.cpp  system_and_poincare_surface.hpp
state_observer/input_output/: general_file_io.cpp  hdf5_io.hpp
